<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/included"
                layout="@layout/toolbar_back"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/xCartItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/included">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:id="@+id/xCarImage"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="#F3F5F8"
                        android:contentDescription="@string/imagem_do_carro"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/xMake"
                        style="@style/textLargeBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="Honda"
                        android:textColor="@color/textColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/xCarImage" />

                    <TextView
                        android:id="@+id/xModel"
                        style="@style/textLargeBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:text=" Fit"
                        android:textColor="@color/PrimaryColor"
                        app:layout_constraintStart_toEndOf="@+id/xMake"
                        app:layout_constraintTop_toBottomOf="@+id/xCarImage" />

                    <ImageView
                        android:id="@+id/xFavorite"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/favoritar_carro"
                        android:src="@drawable/ic_baseline_favorite_border_24"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/xCarImage" />

                    <TextView
                        android:id="@+id/xVersion"
                        style="@style/textLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="1.4 LXL 16V FLEX 4P AUTOMÁTICO"
                        android:textColor="@color/textGray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/xMake" />

                    <TextView
                        android:id="@+id/xPrice"
                        style="@style/textLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="R$ 350.000"
                        android:textColor="@color/textOrange"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/xVersion" />

                    <br.com.luishenrique.cartshop.ui.component.ButtonBuyComponent
                        android:id="@+id/xBuy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/xPrice" />

                    <View
                        android:id="@+id/xViewBuy"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/xPrice" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/xCardInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/xCartItem"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/xInfo"
                        style="@style/textMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/especifica_es"
                        android:textColor="@color/textColor" />

                    <TextView
                        style="@style/textLightLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/marca"
                        android:textColor="@color/textColor" />

                    <TextView
                        android:id="@+id/xMakeInfo"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Honda"
                        android:textColor="@color/textColor" />

                    <TextView
                        style="@style/textLightLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/modelo"
                        android:textColor="@color/textColor" />

                    <TextView
                        android:id="@+id/xModelInfo"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Fit"
                        android:textColor="@color/textColor" />

                    <TextView
                        style="@style/textLightLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/cor"
                        android:textColor="@color/textColor" />

                    <TextView
                        android:id="@+id/xColorInfo"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Azul"
                        android:textColor="@color/textColor" />

                    <TextView
                        style="@style/textLightLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/vers_o"
                        android:textColor="@color/textColor" />

                    <TextView
                        android:id="@+id/xVersionInfo"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="1.4 LXL 16V FLEX 4P AUTOMÁTICO"
                        android:textColor="@color/textColor" />

                    <TextView
                        style="@style/textLightLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/km"
                        android:textColor="@color/textColor" />

                    <TextView
                        android:id="@+id/xKmInfo"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="12000"
                        android:textColor="@color/textColor" />

                    <TextView
                        style="@style/textLightLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ano_do_modelo"
                        android:textColor="@color/textColor" />

                    <TextView
                        android:id="@+id/xYearModelInfo"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="2016"
                        android:textColor="@color/textColor" />

                    <TextView
                        style="@style/textLightLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ano_de_fabrica_o"
                        android:textColor="@color/textColor" />

                    <TextView
                        android:id="@+id/xYearFabInfo"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="2016"
                        android:textColor="@color/textColor" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>